apps/platform-store/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-store
  labels:
    app.kubernetes.io/part-of: platform-store
