apps/platform-store/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-store
  namespace: platform-store
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - store.alphonzojonesjr.com
    secretName: platform-store-tls
  rules:
  - host: store.alphonzojonesjr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-stable
            port:
              number: 80
